# cargo-test-lint

./: .gitignore  .jscpd.json  .semgrep.yml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  sonar-project.properties
.github/scripts/: codebase-review.sh
.github/workflows/: ci.yml  codebase-review.yml  codeql.yml  merge-gate.yml  pr-gate.yml  release.yml
crates/cargo-test-lint/: Cargo.toml
crates/cargo-test-lint/src/: config.rs  cov_parse.rs  diagnostics.rs  lib.rs  main.rs  mutation.rs  parser.rs
crates/cargo-test-lint/src/output/: json.rs  mod.rs  sarif.rs  terminal.rs
crates/cargo-test-lint/src/rules/: assertions.rs  async_safety.rs  cloning.rs  complexity.rs  dead_code.rs  drop.rs  flow.rs  fsio.rs  mod.rs  nextest.rs  semantic.rs  sleep.rs  structure.rs  test_context.rs
crates/cargo-test-lint/src/rules/fixtures/semantic/: embedded_jest_test_code_flagged.txt  embedded_python_test_code_flagged.txt
crates/cargo-test-lint/tests/: config_pbt.rs  cov_parse_pbt.rs  integration_tests.rs  pbt_smoke_test.rs
crates/cargo-test-lint/tests/common/: mod.rs  strategies.rs
crates/cargo-test-lint/tests/fixtures/: semantic_jest_corpus.rs  semantic_no_test_context.rs  semantic_python_corpus.rs
crates/core/: Cargo.toml
crates/core/src/: span.rs
crates/core/tests/: span_pbt.proptest-regressions  span_pbt.rs
crates/ctl/: Cargo.toml
crates/ctl-core/: Cargo.toml
crates/ctl-core/src/: config.rs  coverage.rs  diagnostic.rs  lib.rs  mutation.rs  span.rs
crates/ctl-core/tests/: config_tests.rs  diagnostic_tests.rs  mutation_tests.rs  span_tests.rs
crates/ctl-daemon/: Cargo.toml
crates/ctl-daemon/src/: cache.rs  ipc.rs  lib.rs  matrix.rs  mut.rs  mut_parse.rs  pipeline.rs  watch.rs
crates/ctl-daemon/src/cov/: cov_parse.rs  mod.rs
crates/ctl-daemon/tests/: cache_tests.rs  cov_parse_tests.rs  e2e_tests.rs  ipc_tests.rs  matrix_tests.rs  mut_parse_tests.rs
crates/ctl/src/: daemon.rs  lib.rs  main.rs  output.rs
crates/ctl/tests/: daemon_tests.rs  output_tests.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: cache.rs
crates/daemon/tests/: cache_pbt.rs
docs/: INTEGRATION-rust-analyzer.md  ci.md  guide.md  rules.md
docs/architecture/: ADR-001-workspace-crate-organization.md  ADR-002-ast-driven-lint-engine.md  ADR-003-cargo-toml-configuration.md  ADR-004-output-formats.md  ADR-005-testing-strategy.md
docs/superpowers/plans/: 2026-05-02-ast-driven-test-lint.md  2026-05-02-lint-rule-epics.md
docs/superpowers/specs/: 2026-05-02-ast-driven-test-lint-design.md
fixtures/mixed-gaps/: Cargo.toml  expected-diagnostics.json
fixtures/mixed-gaps/src/: lib.rs
fixtures/simple-uncovered/: Cargo.toml  expected-diagnostics.json
fixtures/simple-uncovered/src/: lib.rs
fixtures/surviving-mutant/: Cargo.toml  expected-diagnostics.json
fixtures/surviving-mutant/src/: lib.rs
