[workspace]
resolver = "2"
members = [
    "crates/ctl-core",
    "crates/ctl-daemon",
    "crates/ctl",
]
exclude = ["fixtures"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
notify = "7"
ignore = "0.4"
toml = "0.8"
tempfile = "3"

[workspace.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/cargo-test-lint-{ target }{ archive-suffix }"
bin-dir = "cargo-test-lint{ binary-ext }"
