[workspace]
resolver = "2"
members = ["crates/cargo-test-lint"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/Jonathangadeaharder/cargo-test-lint"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tempfile = "3"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1"
anstyle = "1"
ignore = "0.4"
regex = "1"

[workspace.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/cargo-test-lint-{ target }{ archive-suffix }"
bin-dir = "cargo-test-lint{ binary-ext }"
