[package]
name = "cargo-test-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "AST-driven test quality linter for Rust"

[[bin]]
name = "cargo-test-lint"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
streaming-iterator = { workspace = true }
anstyle = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
