[package]
name = "test-lint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core types for cargo-test-lint"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
