[package]
name = "ctl-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Async daemon for cargo-test-lint"

[dependencies]
ctl-core = { path = "../ctl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
